# GitSheriff

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
gitsheriff/: __init__.py  __main__.py  cli.py  dumper.py  extractor.py  finder.py  scanner.py  utils.py
